<resources>
    <string name="app_name">DT-Learning-App</string>
    <string name="action_settings">Campus02 Homepage</string>
    <string name="main_text_title">DreamTeam Learning-App</string>
    <string name="speichern_btn">Speichern</string>
    <string name="einblenden">Antwort einblenden</string>
    <string name="ausblenden">Antwort ausblenden</string>
    <string name="frage_erstellen_btn">Frage erstellen</string>
    <string name="frage_anzeigen_btn">Frage anzeigen</string>
    <string name="alle_kaetg_btn">Alle Kategorien</string>
    <string name="eine_kateg_btn">Kategorie...</string>
    <string name="umgebung_kateg_btn">Frage in der Umgebung</string>
    <string name="next">Nächste Frage</string>
    <string name="backToMain">Zurück zum Hauptbildschirm</string>
    <string name="kText">Wählen Sie eine Kategorie zu der Ihnen eine Frage angezeigt werden soll</string>

    <!-- Einstellungen -->
    <string name="einstellungen_btn">Einstellungen</string>
    <string name="einst_btn_maxfragen">Max. Fragen pro Runde</string>
    <string name="einst_btn_umkreis">GPS - Umkreis x km</string>
    <string name="einst_btn_user">Benutzername</string>
    <string name="einst_btn_schwierigkeit">Schwierigkeitsstufe</string>
    <string name="einst_btn_zuruecksetzen">Einstellungen zurücksetzen</string>

    <string name="user_txt">Bitte gib deinen Spielernamen an:</string>
    <string name="runden_txt">Wie viele Runden willst du spielen?</string>
    <string name="umkreis_txt">Aus welchem Umkreis sollen die Fragen gestellt werden?</string>
    <string name="schwierigkeit_txt">Wie schwer sollen die Fragen sein?</string>
    <string name="schwierigkeit_s0_rb">leicht (Stufe 0)</string>
    <string name="schwierigkeit_s1_rb">mittel (Stufe 1)</string>
    <string name="schwierigkeit_s2_rb">schwer (Stufe 2)</string>
    <string name="schwierigkeit_s3_rb">sehr schwer (Stufe 3)</string>
    <string name="schwierigkeit_sa_rb">alle Stufen</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_detailscreen">Alle Fragen</string>
    <string name="title_activity_frage_erstellen">Frage erstellen</string>
    <string name="title_activity_settings">Einstellungen</string>
    <string name="title_activity_dskategorie">Fragen zu einer Kategorie</string>
    <string name="title_activity_dsumgebung">Umgebungs-Einstellungen</string>
    <string name="schwierigkeitsgrade">0 (leicht), 1 (mittel), 2 (schwer), 3 (sehr schwer)</string>
    <string name="defaultError">Ein Fehler ist aufgetreten!</string>
    <string name="categoryError">Keine Kategorien verfügbar!</string>
    <string name="nextQuestionMsg">Die nächste Frage wird geladen</string>
    <string name="gameEndMsg">Das Spiel ist vorbei</string>
    <string name="notNullMsg">Bitte alle Felder ausfüllen!</string>
    <string name="successfulCreationMsg">Frage erfolgreich erstellt</string>
    <string name="okMsg">OK</string>
    <string name="antwortTitel">Antwort:</string>
    <string name="linkZumBild">Link zum Bild:</string>
    <string name="frage_anteigen_activity">Fragen anzeigen</string>
    <string name="max_fragen_activity">Anzahl der Fragen</string>
    <string name="benutzername_activity">Benutzername</string>
    <string name="schwierigkeitsgrad_activity">Schwierigkeitsgrad</string>
    <string name="umkreis_activity">Umkreis</string>

</resources>
