<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="at.campus02.asy.helloworld.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@color/campus02_yellow">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_text_title"
        android:id="@+id/tv_title"
        style="@style/Heading1"
        android:textSize="50dp"
        android:textStyle="bold|italic" />

    <!--<ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/iv_logo"
        android:layout_below="@+id/tv_title"
        android:src="@drawable/campus02_logo"
        android:adjustViewBounds="true"
        android:paddingTop="10dp"
        android:layout_centerHorizontal="true" />-->


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/frage_anzeigen_btn"
        android:id="@+id/frageAnzeigen"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:onClick="frageAnzeigen"
        android:layout_marginTop="150dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/frage_erstellen_btn"
        android:id="@+id/frageErstellen"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:onClick="frageErstellen"
        android:layout_marginTop="250dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/einstellungen_btn"
        android:id="@+id/einstellungen"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:onClick="einstellungen"
        android:layout_marginTop="350dp"/>

</RelativeLayout>
