<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/campus02_yellow"
    tools:context="at.campus02.asy.helloworld.EinstellungenActivity"
    tools:showIn="@layout/activity_einstellungen"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/einst_btn_user"
                android:id="@+id/btn_benutzername"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:paddingTop="@dimen/feldpadding"
                android:paddingBottom="@dimen/feldpadding"
                android:onClick="benutzername"
                android:textSize="@dimen/textgroesse"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/einst_btn_maxfragen"
                android:id="@+id/btn_maxfragen"
                android:layout_below="@+id/btn_benutzername"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:paddingTop="@dimen/feldpadding"
                android:paddingBottom="@dimen/feldpadding"
                android:onClick="maxfragen"
                android:textSize="@dimen/textgroesse"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/einst_btn_umkreis"
                android:id="@+id/btn_umkreis"
                android:layout_below="@+id/btn_maxfragen"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:paddingBottom="@dimen/feldpadding"
                android:paddingTop="@dimen/feldpadding"
                android:onClick="umkreis"
                android:textSize="@dimen/textgroesse"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/einst_btn_schwierigkeit"
                android:id="@+id/btn_schwierigkeitsgrad"
                android:layout_below="@+id/btn_umkreis"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:paddingBottom="@dimen/feldpadding"
                android:paddingTop="@dimen/feldpadding"
                android:onClick="schwierigkeitsgrad"
                android:textSize="@dimen/textgroesse"/>

<!--            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/speichern"
                android:id="@+id/btn_einstspeichern"
                android:layout_below="@+id/btn_schwierigkeitsgrad"
                android:layout_centerHorizontal="true"
                android:background="@color/green"
                android:layout_marginTop="50dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:onClick="speichern"
                android:textSize="20dp"/>
-->
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>